Remove column types and enable response validation
